[package]
name = "super-fast-smb-image-uploader"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }
thiserror = "2.0.3"
dotenvy = "0.15"

tokio = { version = "1", features = ["full"] }
image = "0.25.5"
tokio-retry = "0.3"
futures = "0.3"
rayon = "1.7"
tracing = "0.1"
tracing-subscriber = "0.3"
log = "0.4.22"

rumqttc = "0.24.0"
uuid = { version = "1.11.0", features = ["v4"] }
serde_json = "1.0.133"
async-compression = { version = "0.4.18", features = ["tokio", "gzip"] }

ssh2 = "0.9.4"
